# cloudfm

./: .drone.yml  .editorconfig  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.html  README.md  circle.yml  default.nix  docker-compose.yml  elm-package.json  index.html  package.json  print.html  shell.nix  wercker.yml
api/: package.json
api/fixtures/: collection.ls
api/src/: collection.ls  index.ls
app/: README.md  app.dockerfile  default.nix  elm-package.json  karma.conf.js  package.json  tsconfig.json  tsfmt.json  tslint.json  typings.json  webpack.config.js  webpack.config.ts
app/src/: Album.elm  App.elm  Artist.elm  Backend.elm  Collection.elm  Header.elm  Player.elm  Playlist.elm  Router.elm  Song.elm  Stylesheet.elm  db.ts  main.d.ts  main.ts  main.tsx
app/src/Backend/: Backend.elm  Http.elm  Types.elm
app/src/actions/: album.ts  artist.ts  backend.ts  collection.ts  error.ts  index.ts  player.ts  track.ts  tracks.ts  user.ts
app/src/components/: Album.tsx  App.ts  App.tsx  ArtistList.tsx  Audio.tsx  Backend.tsx  BackendAddForm.tsx  BackendList.tsx  Collection.tsx  CollectionSidebar.tsx  Header.tsx  Howler.tsx  Login.tsx  LoginForm.tsx  Player.tsx  Root.ts  Root.tsx  Router.tsx  Settings.tsx  SettingsSidebar.tsx  Signup.tsx  SignupForm.tsx  Track.ts  TrackItem.ts  TrackItem.tsx  TrackList.ts  TrackList.tsx  User.tsx  index.tsx
app/src/containers/: AddBackend.tsx  AlbumList.tsx  AlbumView.tsx  App.ts  Authentication.ts  Backends.tsx  BackendsSettings.tsx  Collection.tsx  Discover.tsx  Header.tsx  IfUser.tsx  Login.ts  Login.tsx  Player.ts  Player.tsx  Root.ts  (+7 more)
auth/: Cargo.toml  default.nix
auth/src/: main.rs
developer/: app.html  developer.html  lib.html
doc/: book.json
doc/src/: README.md  SUMMARY.md
docs/src/: SUMMARY.md
hosting/: couchdb.html  hosting.html
lib/: Cargo.toml  indexd.dockerfile  proxyd.dockerfile
lib/src/: error.rs  lib.rs  track.rs  uri.rs  user.rs  views.rs
lib/src/index/: .webdav.rs.swp  file.rs  fs.rs  jamendo.rs  mod.rs  webdav.rs
lib/src/models/: album.rs  artist.rs  mod.rs  track.rs  uri.rs  user.rs
lib/src/proxy/: file.rs  jamendo.rs  mod.rs  webdav.rs
lib/src/views/: mod.rs  track.rs
nix/: cloudfm.nix
nix/docker/: couchdb.nix  indexd.nix  proxyd.nix
rust-couchdb/: Cargo.toml
rust-couchdb/src/: db.rs  lib.rs
server/: Cargo.toml  README.md  default.nix  package.json  stable.nix
server/migrations/20160316155553_create_tracks_table/: down.sql  up.sql
server/migrations/20160317160535_create_albums_table/: down.sql  up.sql
server/migrations/20160317160542_create_artists_table/: down.sql  up.sql
server/src/: auth.rs  db.rs  error.rs  lib.rs  main.rs  main.rs.in  schema.rs  server.rs
server/src/backends/: dropbox.rs  fs.rs  jamendo.rs  mod.rs  spotify.rs  youtube.rs
server/src/index/: fs.rs  mod.rs
server/src/indexers/: dropbox.rs  fs.rs  mod.rs
server/src/models/: album.rs  artist.rs  document.rs  error.rs  mod.rs  relationships.rs  resource.rs  settings.rs  song.rs  track.rs  uri.rs  user.rs
server/src/providers/: dropbox.rs  folder.rs  fs.rs  mod.rs
server/src/providers/dropbox/: get.rs  mod.rs
server/src/providers/folder/: get.rs  mod.rs
server/src/routes/: get_track.rs  mod.rs  tracks.rs
server/src/views/: mod.rs  track.rs
src/: App.elm  Collection.elm  DynamicCollection.elm  Header.elm  Main.elm  Player.elm  Song.elm  Stylesheet.elm
src/Backend/: Http.elm  Types.elm  YouTube.elm
user/: backends.html  manager.html  user.html
(+40 files in other folders)
