[package]
name = "cloudfm"
version = "0.1.0"
authors = ["Jakob Gillich <jakob@gillich.me>"]
license = "MIT"

[dependencies]
hyper = "0.9"
url = { version = "1.1.0", features = [ "serde" ] }
iron = "0.3"
router = "0.1"
logger = "0.0.3"
id3 = "0.1"
walkdir = "0.1"
serde = "0.7"
serde_json = "0.7"
serde_macros = "0.7"
dotenv = "0.8"
chill = { version = "*", git = "https://github.com/jgillich/chill.git" }
uuid = "0.2"
#google-youtube3 = "0.1"
jamendo = "0.1.0"
hex = "0.2"
lazy_static = "0.2"
hyperdav = "0.1.2"
