[package]
name = "cloudfm"
version = "0.1.0"
authors = ["Jakob Gillich <jakob@gillich.me>"]
license = "MIT"

[dependencies]
hyper = "0.9.6"
url = { version = "1.1.1", features = [ "serde" ] }
iron = "0.3.0"
router = "0.1.1"
logger = "0.0.3"
id3 = "0.1.10"
walkdir = "0.1.5"
serde = "0.7.5"
serde_json = "0.7.1"
serde_macros = "0.7.5"
dotenv = "0.8.0"
chill = { version = "*", git = "https://github.com/jgillich/chill.git" }
uuid = "0.2.2"
jamendo = "0.1.0"
hex = "0.2.0"
lazy_static = "0.2.1"
hyperdav = "0.1.2"
