[package]
name = "cloudfm-server"
version = "0.1.0"
authors = ["Jakob Gillich <jakob@gillich.me>"]
license = "MIT"
build = "build.rs"

[features]
default = ["serde_macros"]
stable = ["serde_codegen"]

[dependencies]
iron = "=0.2"
# FIXME router depends on iron >= 0.2, < 0.4, so cargo installs 0.3
router = "=0.1.0"
mount = "0.0.10"
id3 = "0.1"
walkdir = "0.1"
serde = "0.7"
serde_json = "0.7"
serde_macros = { version = "*", optional = true }
rust-crypto = "0.2"
dotenv = "0.8"
chill = { version = "*", git = "https://github.com/jgillich/chill.git" }
uuid = "0.1"

[build-dependencies]
serde_codegen = { version = "*", optional = true }
syntex = "*"
