[package]
name = "cloudfm-server"
version = "0.1.0"
authors = ["Jakob Gillich <jakob@gillich.me>"]
license = "MIT"

[dependencies]
iron = "=0.2"
# FIXME router depends on iron >= 0.2, < 0.4, so cargo installs 0.3
router = "=0.1.0"
mount = "0.0.10"
id3 = "0.1"
walkdir = "0.1"
serde = "0.7"
serde_json = "0.7"
serde_macros = "0.7"
rust-crypto = "0.2"
dotenv = "0.8"
chill = { version = "*", git = "https://github.com/jgillich/chill.git" }
uuid = "0.1"
#google-youtube3 = "0.1"
base64 = "0.1.1"
machine-id = "0.2.2"
jamendo = { version = "*", git = "https://github.com/jgillich/jamendo-rs" }
